fixed bug with product title too long

--- a/src/app/components/product-card/product-card.component.scss
+++ b/src/app/components/product-card/product-card.component.scss
@@ -38,6 +38,7 @@ img{
   height: 2.4em;
   max-height: 2.4em;
   font-weight: bold;
+  word-break: break-all;
 }
 :host{
   transition: width 1s;
